working on mobile responsive issues

--- a/css/custom.css
+++ b/css/custom.css
@@ -5,6 +5,10 @@
 .no-padding {
 	padding: 0 !important;
 }
+.no-lr-padding {
+	padding-right: 0 !important;
+	padding-left: 0 !important;
+}
 .list-inline > li {
 	display: inline-block;
 }
